# fintoc-python

./: .coveragerc  .gitignore  .pylintrc  CHANGELOG.md  LICENSE.md  Makefile  README.md  RELEASING.md  codecov.yml  pyproject.toml
.circleci/: config.yml
.github/: pull_request_template.md
.github/workflows/: linters.yml  release.yml  tests.yml
examples/: webhook.py
fintoc/: __init__.py  client.py  constants.py  core.py  errors.py  helpers.py  jws.py  mixins.py  paginator.py  resource_handlers.py  resources.py  utils.py  version.py  webhook.py
fintoc/managers/: __init__.py  _link_token_manager.py  accounts_manager.py  charges_manager.py  checkout_sessions_manager.py  dispute_documents_manager.py  disputes_manager.py  invoices_manager.py  links_manager.py  movements_manager.py  payment_intents_manager.py  payment_links_manager.py  refresh_intents_manager.py  refunds_manager.py  subscription_intents_manager.py  subscriptions_manager.py  tax_returns_manager.py  webhook_endpoints_manager.py
fintoc/mixins/: __init__.py  manager_mixin.py  resource_mixin.py
fintoc/resources/: __init__.py  account.py  balance.py  charge.py  checkout_session.py  dispute.py  dispute_document.py  generic_fintoc_resource.py  income.py  institution.py  institution_invoice.py  institution_tax_return.py  invoice.py  link.py  movement.py  other_taxes.py  payment_intent.py  payment_link.py  recipient_account.py  refresh_intent.py  (+10 more)
scripts/: bump.sh
tests/: conftest.py  test_client.py  test_core.py  test_integration.py  test_jws.py  test_paginator.py  test_sample.py  test_utils.py  test_webhook.py
(+45 files in other folders)
