[tool.poetry]
name = "fintoc"
version = "2.10.0"
description = "The official Python client for the Fintoc API."
authors = ["Daniel Leal <daniel@fintoc.com>", "Nebil Kawas <nebil@uc.cl>"]
maintainers = ["Daniel Leal <daniel@fintoc.com>"]
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://fintoc.com/"
repository = "https://github.com/fintoc-com/fintoc-python"
exclude = [
    ".github",
    ".coveragerc",
    ".flake8",
    ".pylintrc",
    "Makefile",
    "scripts",
    "tests"
]

[tool.poetry.dependencies]
python = "^3.7"
httpx = ">=0.16, < 1.0"
cryptography = "<44.0.0"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
flake8 = "^3.8.4"
isort = "^5.6.4"
pylint = "^2.6.0"
pytest = "^6.1.1"
pytest-cov = "^2.12.1"

[tool.poetry.urls]
"Issue Tracker" = "https://github.com/fintoc-com/fintoc-python/issues"

[tool.poetry.group.test.dependencies]
freezegun = "^1.5.1"

